# ai-programing

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bootstrapping/: Dockerfile  README.md  docker-compose.yml
developing/: Dockerfile  README.md  pyproject.toml
developing/call_server/: main.py
developing/generate_image/: main.py
developing/image_description_clustering/: image_description_clustering.py
developing/ollama_api/: print_output.py
developing/personal_bot/: personal_bot.py
developing/pull_llava/: main.py
developing/understand_image/: understand_image.py
sd/: sd.py
server/: Dockerfile  pyproject.toml
server/fastapi_server/: main.py
