[tool.poetry]
name = "ai-developing"
version = "0.1.0"
description = ""
authors = ["Adrian Cooke <105147+agcooke@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
gradio = "^4.31.1"
ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
